# veil-connect

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeLists32.txt  CMakeLists64.txt  LICENSE  README.MD  config.h
breakpad_wrapper/: CMakeLists.txt  breakpad_wrapper.cpp  breakpad_wrapper.h  breakpad_wrapper_data.c
devops/: veil-connect-linux-installer.sh
devops/ansible/: README.MD  inventory  windows_builder_play.yml
devops/deb/root/DEBIAN/: control  postinst  postrm
devops/deb_config/root/DEBIAN/: postinst  postrm
devops/deb_embedded/: veil-connect-embedded-installer.sh
devops/docker/: Dockerfile.RED7-3  Dockerfile.alt9  Dockerfile.alteros7  Dockerfile.bionic  Dockerfile.bullseye  Dockerfile.buster  Dockerfile.el7  Dockerfile.el8  Dockerfile.focal  Dockerfile.jammy  Dockerfile.redos7.3  Dockerfile.stretch  Dockerfile.xenial
devops/inno-setup/: veil-connect-installer-32.iss  veil-connect-installer-64.iss  veil-connect-installer.iss
devops/inno_setup_script/: veil_connect_installer.iss
devops/jenkins/: vdi-connect.groovy  veil-connect-linux.groovy  veil-connect-win.groovy
devops/jenkins/vars/: buildParameters.groovy  buildSteps.groovy  notifyBuild.groovy
devops/pipeline/: vdi-connect-dec.groovy  vdi-connect.groovy
devops/rpm/: veil-connect-alt.spec  veil-connect-el.spec  veil-connect.spec
doc/: css_style.css  ping_no_console.vbs  readme.txt  start_client_update.sh  start_client_update_centos.sh  start_vdi_client.sh  update_script.sh  veil-connect-build.md  veil-connect-embedded-build.md  veil-connect.desktop
doc/rdp_data/: rdp_template_file.txt
doc/x2go_data/: x2go_sessions
po/: POTFILES  POTFILES.in  ru.po  thin_client_veil.po  veil-connect.pot
po/ru/LC_MESSAGES/: veil-connect.m  veil-connect.mo
resources/: virt-viewer.gresource.xml
resources/ui/: additional_addresses_form.glade  ask_pass_form.glade  ask_pass_form.ui  connection_info_dialog.glade  connection_info_dialog.ui~  controller_manager_form.glade  loudplay_control_form.glade  remote-viewer-connect_veil.glade  remote-viewer-connect_veil.ui  start_settings_form.glade  start_settings_form.ui  start_settings_form.ui~  text_msg_form.glade  usb_selector_form.glade  usb_selector_form.ui  usb_spice_dialog_form.glade  usb_tcp_redir_form.ui  vdi_app_selector_form.glade  vdi_app_selector_form.ui  vdi_app_selector_form.ui~  vdi_manager_form.glade  vdi_manager_form.ui  vdi_messenger_from.glade  vdi_messenger_from.ui  vdi_messenger_from.ui~  vdi_user_settings_form.glade  vdi_user_settings_form.ui  virt-viewer-about.glade  virt-viewer-about.ui  virt-viewer-auth.ui  virt-viewer-preferences.glade  virt-viewer-vm-connection.glade  virt-viewer_veil.glade  virt-viewer_veil.ui  virt-viewer_veil.ui~  x2go_control_form.glade  x2go_control_form.ui
src/: about_dialog.c  about_dialog.h  additional_addresses_widget.c  additional_addresses_widget.h  conn_info_dialog.c  conn_info_dialog.h  connect_settings_data.h  custom_property_data.h  main.c  multi_button.c  multi_button.h  remote-viewer-connect.c  remote-viewer-connect.h  remote-viewer-util.c  remote-viewer-util.h  remote-viewer.c  remote-viewer.h  remote_viewer_start_settings.c  remote_viewer_start_settings.h  settings_data.c  settings_data.h  vm_control_menu.c  vm_control_menu.h
src/app_updater/: app_updater.c  app_updater.h
src/controller_client/: controller_manager.c  controller_manager.h  controller_session.c  controller_session.h
src/loadplay/: loadplay_config.c  loadplay_config.h  loadplay_launcher.c  loadplay_launcher.h
src/local_ipc/: win_service_ipc.c  win_service_ipc.h
src/loudplay/: loudplay_config.c  loudplay_config.h  loudplay_control_server.c  loudplay_control_server.h  loudplay_control_widget.c  loudplay_control_widget.h  loudplay_launcher.c  loudplay_launcher.h
src/messenger/: messenger.c  messenger.h
src/net_speedometer/: net_speedometer.c  net_speedometer.h
src/qr_code_generation/: qr_code_gen.c  qr_code_gen.h  qr_code_renderer.c  qr_code_renderer.h
src/rdp_viewer/: native_rdp_launcher.c  native_rdp_launcher.h  rdp_channels.c  rdp_channels.h  rdp_client.c  rdp_client.h  rdp_clipboard.c  rdp_clipboard.h  rdp_cursor.c  rdp_cursor.h  rdp_data.h  rdp_disp.c  rdp_disp.h  rdp_display.c  rdp_display.h  rdp_keyboard.c  rdp_keyboard.h  rdp_rail.c  rdp_rail.h  rdp_settings.c  rdp_settings.h  rdp_util.c  rdp_util.h  rdp_viewer.c  rdp_viewer.h  rdp_viewer_window.c  rdp_viewer_window.h  windows_rdp_launcher.c  windows_rdp_launcher.h
src/usb_redirection/: usb_selector_widget.c  usb_selector_widget.h  usbredir_controller.c  usbredir_controller.h  usbredir_dialog.c  usbredir_dialog.h  usbredir_spice.c  usbredir_spice.h  usbredir_util.c  usbredir_util.h  usbredirhost.c  usbredirhost.h  usbredirserver.h  usbredirserver_data.h  usbredirserver_lin.c  usbredirserver_win.c
src/utility/: async.c  async.h  atomic_string.c  atomic_string.h  crashhandler.c  crashhandler.h  gobject_gui.c  gobject_gui.h  jsonhandler.c  jsonhandler.h  settingsfile.c  settingsfile.h  veil_logger.c  veil_logger.h  veil_network.c  veil_network.h  veil_time.c  veil_time.h
src/vdi_client/: vdi_api_session.c  vdi_api_session.h  vdi_app_selector.c  vdi_app_selector.h  vdi_event.c  vdi_event.h  vdi_event_types.h  vdi_manager.c  vdi_manager.h  vdi_pool_widget.c  vdi_pool_widget.h  vdi_redis_client.c  vdi_redis_client.h  vdi_session.c  vdi_session.h  vdi_user_settings_widget.c  vdi_user_settings_widget.h  vdi_ws_client.c  vdi_ws_client.h
src/virt_viewer/: debug-helper.c  virt-viewer-app.c  virt-viewer-app.h  virt-viewer-auth.c  virt-viewer-auth.h  virt-viewer-display-spice.c  virt-viewer-display.c  virt-viewer-file-transfer-dialog.c  virt-viewer-file.c  virt-viewer-notebook.c  virt-viewer-resources.c  virt-viewer-session-spice.c  virt-viewer-session-spice.h  virt-viewer-session.c  virt-viewer-session.h  virt-viewer-vm-connection.c  virt-viewer-window.c  virt-viewer-window.h
src/x2go/: x2go_launcher.c  x2go_launcher.h  x2go_launcher_pyhoca.c  x2go_launcher_unix.c  x2go_launcher_win.c  x2go_launcher_x2goclient.c
tests/: test_networking.c
(+16 files in other folders)
